[gd_scene load_steps=6 format=3 uid="uid://51byfeca7fkr"]

[ext_resource type="Script" path="res://game/game.gd" id="1_6nxl4"]
[ext_resource type="PackedScene" uid="uid://dwvutus2a5n78" path="res://game/answer.tscn" id="2_1pyiq"]
[ext_resource type="Theme" uid="uid://eqitrdce3ik2" path="res://theme.tres" id="2_w3fc3"]
[ext_resource type="PackedScene" uid="uid://bd281ib6bdl0w" path="res://game/character.tscn" id="4_j0osc"]
[ext_resource type="PackedScene" uid="uid://73kthhwr43x4" path="res://game/player_score.tscn" id="5_ouyg0"]

[node name="Game" type="CanvasLayer"]
script = ExtResource( "1_6nxl4" )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_custom_anchors": false
}

[node name="QuestionBox" type="VBoxContainer" parent="Background"]
offset_left = 30.0
offset_top = 30.0
offset_right = 738.0
offset_bottom = 248.0
theme = ExtResource( "2_w3fc3" )
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="QuestionCategory" type="Label" parent="Background/QuestionBox"]
offset_right = 708.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Science"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="Background/QuestionBox"]
offset_top = 28.0
offset_right = 708.0
offset_bottom = 78.0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 22
text = "dsfdfsfsdfsdfsdfsdfsdf sdf sdf sf sd sf?"

[node name="Answer1" parent="Background/QuestionBox" instance=ExtResource( "2_1pyiq" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 82.0
offset_right = 708.0
offset_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" parent="Background/QuestionBox" instance=ExtResource( "2_1pyiq" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 117.0
offset_right = 708.0
offset_bottom = 148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" parent="Background/QuestionBox" instance=ExtResource( "2_1pyiq" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 152.0
offset_right = 708.0
offset_bottom = 183.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" parent="Background/QuestionBox" instance=ExtResource( "2_1pyiq" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 187.0
offset_right = 708.0
offset_bottom = 218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Characters" type="HBoxContainer" parent="Background"]
offset_top = 278.0
offset_right = 774.0
offset_bottom = 600.0
alignment = 2
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="Character" parent="Background/Characters" instance=ExtResource( "4_j0osc" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 385.0
offset_bottom = 322.0

[node name="Character2" parent="Background/Characters" instance=ExtResource( "4_j0osc" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 389.0
offset_right = 774.0
offset_bottom = 322.0

[node name="PlayerLeaderboard" type="VBoxContainer" parent="Background"]
minimum_size = Vector2(200, 0)
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -249.0
offset_right = 1.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( "2_w3fc3" )
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_custom_anchors": false
}

[node name="PlayerScore" parent="Background/PlayerLeaderboard" instance=ExtResource( "5_ouyg0" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 250.0
offset_bottom = 298.0

[node name="PlayerScore2" parent="Background/PlayerLeaderboard" instance=ExtResource( "5_ouyg0" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 302.0
offset_right = 250.0
offset_bottom = 600.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
